syntax fix in parent journey, update cstml styling in School journey in admin portal

--- a/CheckYourEligibility-Admin/Views/Check/Enter_Child_Details.cshtml
+++ b/CheckYourEligibility-Admin/Views/Check/Enter_Child_Details.cshtml
@@ -44,10 +44,10 @@
 
                  @if (childIndex ==i)
                     {
-                        <input asp-for="ChildList[i].FirstName" id="ChildList[@i].FirstName" class="govuk-input govuk-!-width-two-thirds" type="text" aria-label="First name" autofocus/>
+                        <input asp-for="ChildList[i].FirstName" id="ChildList[@i].FirstName" class="govuk-input govuk-!-width-two-thirds @(ViewData.ModelState[$"ChildList[{@i}].FirstName"]?.Errors.Count > 0 ? "govuk-input--error" : "")" type="text" aria-label="First name" autofocus/>
                     } else 
                     {
-                       <input asp-for="ChildList[i].FirstName" id="ChildList[@i].FirstName" class="govuk-input govuk-!-width-two-thirds" type="text" aria-label="First name"/>
+                       <input asp-for="ChildList[i].FirstName" id="ChildList[@i].FirstName" class="govuk-input govuk-!-width-two-thirds @(ViewData.ModelState[$"ChildList[{@i}].FirstName"]?.Errors.Count > 0 ? "govuk-input--error" : "")" type="text" aria-label="First name"/>
                     }
             </div>
 
@@ -58,7 +58,7 @@
                 <p class="govuk-error-message">
                     <span asp-validation-for="ChildList[i].LastName"></span>
                 </p>
-                <input asp-for="ChildList[i].LastName" id="ChildList[@i].LastName" class="govuk-input govuk-!-width-two-thirds" type="text">
+                <input asp-for="ChildList[i].LastName" id="ChildList[@i].LastName" class="govuk-input govuk-!-width-two-thirds @(ViewData.ModelState[$"ChildList[{@i}].LastName"]?.Errors.Count > 0 ? "govuk-input--error" : "")" type="text">
             </div>
 
             <div class="govuk-form-group" data-type="dob-form-group">
@@ -81,7 +81,7 @@
                                 <label class="govuk-label govuk-date-input__label" for="ch1-day">
                                     Day
                                 </label>
-                                <input asp-for="ChildList[i].Day" id="ChildList[@i].Day" data-type="dob"  class="govuk-input govuk-date-input__input govuk-input--width-2" type="text" inputmode="numeric" maxlength="2" aria-label="Day">
+                                <input asp-for="ChildList[i].Day" id="ChildList[@i].Day" data-type="dob"  class="govuk-input govuk-date-input__input govuk-input--width-2 @(ViewData.ModelState[$"ChildList[{@i}].DateOfBirth.Day"]?.Errors.Count > 0 ? "govuk-input--error" : "")" type="text" inputmode="numeric" maxlength="2" aria-label="Day">
                             </div>
                         </div>
 
@@ -90,7 +90,7 @@
                                 <label class="govuk-label govuk-date-input__label" for="ch1-month">
                                     Month
                                 </label>
-                                <input asp-for="ChildList[i].Month" id="ChildList[@i].Month" data-type="dob"  class="govuk-input govuk-date-input__input govuk-input--width-2" type="text" inputmode="numeric" maxlength="2" aria-label="Month">
+                                <input asp-for="ChildList[i].Month" id="ChildList[@i].Month" data-type="dob"  class="govuk-input govuk-date-input__input govuk-input--width-2 @(ViewData.ModelState[$"ChildList[{@i}].DateOfBirth.Month"]?.Errors.Count > 0 ? "govuk-input--error" : "")" type="text" inputmode="numeric" maxlength="2" aria-label="Month">
                             </div>
                         </div>
 
@@ -99,7 +99,7 @@
                                 <label class="govuk-label govuk-date-input__label" for="ch1-year">
                                     Year
                                 </label>
-                                <input asp-for="ChildList[i].Year" id="ChildList[@i].Year" data-type="dob"  class="govuk-input govuk-date-input__input govuk-input--width-4" type="text" inputmode="numeric" maxlength="4" aria-label="Year">
+                                <input asp-for="ChildList[i].Year" id="ChildList[@i].Year" data-type="dob"  class="govuk-input govuk-date-input__input govuk-input--width-4 @(ViewData.ModelState[$"ChildList[{@i}].DateOfBirth.Year"]?.Errors.Count > 0 ? "govuk-input--error" : "")" type="text" inputmode="numeric" maxlength="4" aria-label="Year">
                             </div>
                         </div>
                     </div>
