--- a/CheckYourEligibility-Admin/Views/Shared/_ValidationSummary.cshtml
+++ b/CheckYourEligibility-Admin/Views/Shared/_ValidationSummary.cshtml
@@ -15,7 +15,13 @@
     {
         propertyOrder = typeof(Child).GetProperties().Select(p => p.Name).ToList();
     }
-    
+
+    var dobMappings = new Dictionary<string, string>
+    {
+        {"DateOfBirth.Day", "Day"},
+        {"DateOfBirth.Month", "Month"},
+        {"DateOfBirth.Year", "Year"}
+    };
 
     var flattenedErrors = Model
         .SelectMany(m => m.Value.Errors
@@ -31,6 +37,11 @@
             var extractedPropertyName = x.Field.Contains("ChildList")
             ? x.Field.Substring(x.Field.LastIndexOf('.') + 1)
             : x.Field;
+
+            if (dobMappings.ContainsKey(x.Field))
+            {
+                extractedPropertyName = dobMappings[x.Field];
+            }
 
             return propertyOrder.IndexOf(extractedPropertyName);
         })
