fixed issue with not finding the ChildDob or PGDob correctly

--- a/CheckYourEligibility-Admin/Views/Application/Search.cshtml
+++ b/CheckYourEligibility-Admin/Views/Application/Search.cshtml
@@ -172,7 +172,7 @@
                                             <label class="govuk-label govuk-date-input__label" for="ChildDobYear">
                                                 Year
                                             </label>
-                                                <input asp-for="ChildDobYear" class="govuk-input govuk-date-input__input govuk-input--width-2 @(ViewData.ModelState["ChildDob.ChildDobYear"]?.Errors.Count > 0 ? "govuk-input--error" : "")" id="ChildDobYear" name="ChildDobYear" inputmode="text" maxlength="4" type="text" inputmode="numeric" aria-label="Year">
+                                                <input asp-for="ChildDobYear" class="govuk-input govuk-date-input__input govuk-input--width-2 @(ViewData.ModelState["ChildDob.ChildDob"]?.Errors.Count > 0 ? "govuk-input--error" : "")" id="ChildDobYear" name="ChildDobYear" inputmode="text" maxlength="4" type="text" inputmode="numeric" aria-label="Year">
                                             </div>
 
                                     </div>
