Update page content

--- a/CheckYourEligibility-Parent/Views/Check/Enter_Child_Details.cshtml
+++ b/CheckYourEligibility-Parent/Views/Check/Enter_Child_Details.cshtml
@@ -1,7 +1,7 @@
 ﻿@model CheckYourEligibility_FrontEnd.Models.Children
 
 @{
-    ViewData["Title"] = "Provide details of your children";
+    ViewData["Title"] = "Add details of your children";
     var childIndex = TempData["childIndex"] as int?;
     var validationMessage = TempData["ValidationMessage"] as string;
  }
@@ -33,10 +33,10 @@
 </noscript>
 
 <h1 class="govuk-heading-l" tabindex="-1">
-    Provide details of your children
+    Add details of your children
 </h1>
 
-<p>Include all your children who are in compulsory education. You can use the add another option, if you have more than one child.</p>
+<p>Include all children who are in compulsory education..</p>
 
 <form asp-controller="Check" asp-action="Enter_Child_Details" method="post" novalidate>
    <input type="hidden" id="ChildIndex" />
