--- a/CheckYourEligibility-Parent/Views/Shared/_LayoutNoBackButton.cshtml
+++ b/CheckYourEligibility-Parent/Views/Shared/_LayoutNoBackButton.cshtml
@@ -98,7 +98,7 @@
                         </li>
 
                         <li class="govuk-footer__inline-list-item">
-                            <a class="govuk-footer__link" href="https://forms.office.com/Pages/ResponsePage.aspx?id=yXfS-grGoU2187O4s0qC-URYbNo1-R1EubHA0gNJis5UOVo3VU1KV0E0QkxTMFQ0RFZQUUZCR0E0WC4u" target="_blank">
+                            <a class="govuk-footer__link" href="../contact">
                                 Contact us
                             </a>
                         </li>
