final changes for Nass is required to be displayed properly

--- a/CheckYourEligibility-Parent/Views/Check/Nass.cshtml
+++ b/CheckYourEligibility-Parent/Views/Check/Nass.cshtml
@@ -47,7 +47,7 @@
                     <div class="govuk-radios" data-module="govuk-radios">
                         <div class="govuk-radios__item">
                             <input class="govuk-radios__input" id="IsNinoSelected" asp-for="IsNassSelected" type="radio" value="true" aria-controls="conditional-nass-number" aria-expanded="false" aria-label="Yes">
-                            <label class="govuk-label govuk-radios__label" for="nass-number">
+                            <label class="govuk-label govuk-radios__label" for="NationalAsylumSeekerServiceNumber">
                                 Yes
                             </label>
                         </div>
