186036 Update content on LA dashboard

--- a/CheckYourEligibility-Admin/Views/Home/Index.cshtml
+++ b/CheckYourEligibility-Admin/Views/Home/Index.cshtml
@@ -87,25 +87,30 @@
         {
             <div class="govuk-grid-row">
                 <div class="govuk-grid-column-full">
+
+                    <h2 class="govuk-heading-m">
+                        Free school meals
+                    </h2>
+
                     <div class="dfe-grid-container">
 
                         <div class="dfe-card-container">
                             <div class="def-card">
                                 <a class="govuk-heading-m govuk-link govuk-link--no-visited-state dfe-card-link--header" id="individual" aria-labelledby="individual-heading individual-description" href="@Url.Action("Enter_Details", "Check")">
-                                    <span id="individual-heading" class="sr-only">Check free school meals - single student</span>
-                                    Check free school meals - single student
+                                    <span id="individual-heading" class="sr-only">Run a check for one parent or guardian</span>
+                                    Run a check for one parent or guardian
                                 </a>
-                                <p id="individual-description">Find out if individual pupils can get free school meals.</p>
+                                <p id="individual-description">Run an eligibility check for one parent or guardian.</p>
                             </div>
                         </div>
 
                         <div class="dfe-card-container">
                             <div class="def-card">
                                 <a class="govuk-heading-m govuk-link govuk-link--no-visited-state dfe-card-link--header" id="batch" aria-labelledby="batch-heading batch-description" href="@Url.Action("Batch_Check", "BulkUpload")">
-                                    <span id="batch-heading" class="sr-only">Check free school meals - multiple students</span>
-                                    Check free school meals - multiple students
+                                    <span id="batch-heading" class="sr-only">Run a batch check</span>
+                                    Run a batch check
                                 </a>
-                                <p id="batch-description">Find out if multiple pupils can get free school meals by uploading a csv template.</p>
+                                <p id="batch-description">Run an eligibility check for multiple parents or guardians.</p>
                             </div>
                         </div>
 
@@ -115,7 +120,7 @@
                                     <span id="pending-heading" class="sr-only">Pending applications</span>
                                     Pending applications
                                 </a>
-                                <p id="pending-description">Check entitlement for children not found in the system.</p>
+                                <p id="pending-description">Check eligibility for children not found in the system.</p>
                             </div>
                         </div>
 
@@ -125,17 +130,17 @@
                                     <span id="search-heading" class="sr-only">Search all records</span>
                                     Search all records
                                 </a>
-                                <p id="search-description">Search all pupil free school meal records and export results.</p>
+                                <p id="search-description">Search all records and export results.</p>
                             </div>
                         </div>
 
                         <div class="dfe-card-container">
                             <div class="def-card">
                                 <a class="govuk-heading-m govuk-link govuk-link--no-visited-state dfe-card-link--header" id="search" aria-labelledby="search-heading search-description" href="/Home/Guidance">
-                                    <span id="search-heading" class="sr-only">Search all records</span>
-                                    Guidance
+                                    <span id="search-heading" class="sr-only">Guidance for reviewing evidence</span>
+                                    Guidance for reviewing evidence
                                 </a>
-                                <p id="search-description">Read guidance on how to review supporting evidence.  </p>
+                                <p id="search-description">Read guidance on how to review supporting evidence.</p>
                             </div>
                         </div>
                     </div>
