--- a/CheckYourEligibility-Parent/Views/Check/Application_Sent.cshtml
+++ b/CheckYourEligibility-Parent/Views/Check/Application_Sent.cshtml
@@ -42,7 +42,7 @@
         {
             <tr class="govuk-table__row">
                 <th scope="row" class="govuk-table__header">@response.Data.ChildFirstName @response.Data.ChildLastName</th>
-                <td class="govuk-table__cell">@response.Data.School.Name</td>
+                <td class="govuk-table__cell">@response.Data.Establishment.Name</td>
                 <td class="govuk-table__cell">@response.Data.Reference</td>
             </tr>
         }
