--- a/CheckYourEligibility-Parent/Views/Check/Outcome/Not_Found.cshtml
+++ b/CheckYourEligibility-Parent/Views/Check/Outcome/Not_Found.cshtml
@@ -3,20 +3,19 @@
 
 <div id="content" class="govuk-grid-column-full" data-type="Not_Found">
 
-    <h1 class="govuk-heading-l">We could not check your children’s entitlement to free school meals</h1>
+    <div class="govuk-notification-banner" role="region" aria-labelledby="govuk-notification-banner-title" data-module="govuk-notification-banner" data-govuk-notification-banner-init="">  
+        <div class="govuk-notification-banner__header">
+            <h2 class="govuk-notification-banner__title" id="govuk-notification-banner-title">
+                Check failed
+            </h2>
+        </div>
+        <div class="govuk-notification-banner__content">
+            <p class="govuk-notification-banner__heading">The personal information you entered does not match departmental records.</p>
+        </div>
+    </div>
 
-    <p>It’s possible that the Universal Credit statements needed to perform the check aren’t currently available.</p>
+    <h1 class="govuk-heading-l">Check your details and try again</h1>
+    <p class="govuk-body"><a href="~/Check/Enter_Details">Try again</a>, ensuring you’ve entered your details accurately.</p>
+    <p class="govuk-body">If the check keeps failing, contact your school administrator.</p>
 
-    <h2 class="govuk-heading-m">What you can do</h2>
-
-    <p>If you have up-to-date Universal Credit statements as supporting evidence, show these to your school’s administrator. </p>
-    <p><strong>Important: </strong> Your annual net earned income must be no higher than £7,400.  </p>
-    <p>Any documents you provide must show your income and the date. </p>
-    <p>If you are an asylum seeker, check to see what asylum support is available. </p>
-
-    <h3 class="govuk-heading-s">Further guidance </h3>
-
-    <p>More in-depth information on supporting evidence can be found in the <a target="_blank" href="/Home/Parental_Guidance">guidance notes for parents and guardians. </a></p>
-
-    <p><a href="javascript:window.history.back()">Try again</a></p>
 </div>
