--- a/CheckYourEligibility-Parent/Views/Check/Enter_Details.cshtml
+++ b/CheckYourEligibility-Parent/Views/Check/Enter_Details.cshtml
@@ -13,7 +13,7 @@
     <partial name="_ValidationSummary" model="ViewData.ModelState" />
 }
 
-<h1 class="govuk-heading-l">Enter your details</h1>
+<h2 class="govuk-heading-l">Enter your information</h2>
 
 <p>The information you provide will be compared with other government departments records to check for your eligibility.</p>
 <p>For further information, please check our <a href="@Url.Action("Privacy", "Home")">Privacy statement</a>.</p>
@@ -142,7 +142,7 @@
         </fieldset>
     </div>
     <button class="govuk-button govuk-!-margin-top-5" data-module="govuk-button">
-        Save and continue
+        Save
     </button>
 </form>
 
