--- a/CheckYourEligibility-Parent/Views/Check/Check_Answers.cshtml
+++ b/CheckYourEligibility-Parent/Views/Check/Check_Answers.cshtml
@@ -17,7 +17,7 @@
     <partial name="_ValidationSummary" model="ViewData.ModelState" />
 }
 
-<h1 class="govuk-heading-l">Check your answers before sending</h1>
+<h2 class="govuk-heading-l">Check your answers before sending</h2>
 
 <div class="govuk-summary-card">
     <div class="govuk-summary-card__title-wrapper">
@@ -31,7 +31,7 @@
 
             <div class="govuk-summary-list__row">
                 <dt class="govuk-summary-list__key">
-                    Name
+                    Last Name
                 </dt>
                 <dd class="govuk-summary-list__value">
                     @Model.ParentFirstName @Model.ParentLastName
