--- a/CheckYourEligibility-Admin/Views/LocalAuthority/Check/Outcome/Not_Eligible.cshtml
+++ b/CheckYourEligibility-Admin/Views/LocalAuthority/Check/Outcome/Not_Eligible.cshtml
@@ -1,49 +1,37 @@
 ﻿@* <a class="govuk-back-link" href="#" onclick="history.back(); return false;">Back</a> *@
 <a class="govuk-back-link-nolink"></a>
 
-<div class="govuk-grid-column-full">
-    <h1 class="govuk-heading-l">Your children may not be entitled to free school meals</h1>
-    <p> Based on the information you’ve provided, we cannot confirm if your children are entitled to free school meals. </p>
-    <p>If you think that they definitely are entitled, you can show supporting evidence to your school to help us re-assess.</p>
+<div id="content" data-type="Not_Eligible">
+    <div class="govuk-notification-banner" role="region" aria-labelledby="govuk-notification-banner-title" data-module="govuk-notification-banner" data-govuk-notification-banner-init="">
+        <div class="govuk-notification-banner__header">
+            <h2 class="govuk-notification-banner__title" id="govuk-notification-banner-title">
+                May not be eligible
+            </h2>
+        </div>
+        <div class="govuk-notification-banner__content">
+            <p class="govuk-notification-banner__heading">
+                The children of this parent or guardian may not be eligible for free school meals.
+            </p>
+            <p class="govuk-body">The parent or guardian can appeal, but you’ll need to review their supporting evidence.</p>
 
-    <div class="govuk-accordion" data-module="govuk-accordion" id="accordion-default">
-        <div class="govuk-accordion__section">
-            <div class="govuk-accordion__section-header">
-                <h2 class="govuk-accordion__section-heading">
-                    <span class="govuk-accordion__section-button" id="accordion-default-heading-1">
-                        Accepted kinds of supporting evidence
-                    </span>
-                </h2>
-            </div>
-            <div id="accordion-default-content-1" class="govuk-accordion__section-content">
-                <p><strong>Important: </strong> Please do not send any documents which do not meet the criteria that follows. </p>
-                <p>To support your claim for free school meals, you can send your: </p>
-                <ul>
-                    <li>latest Universal Credit statements (up to three) </li>
-                    <li>
-                        latest tax credit statement form TC602A (Award Notices) or TC603R (Auto Renewal), showing you are receiving Working Tax Credit run-on
-                    </li>
-                    <li>
-                        latest tax credit statement form TC602A (Award Notices) or TC603R (Auto Renewal), showing you are receiving Child Tax Credit
-                    </li>
-                    <li>
-                        Letter of Entitlement for Income Support
-                    </li>
-                    <li>
-                        Letter of Entitlement for income-based Jobseeker’s Allowance
-                    </li>
-                    <li>
-                        Letter of Entitlement for the guaranteed element of Pension Credit
-                    </li>
-                    <li>document showing you are receiving relevant support under part VI of the Immigration and Asylum Act 1999 </li>
-                    <div></div>
-
-                    <h3 class="govuk-heading-s">Further guidance </h3>
-                    <p>More in-depth information on supporting evidence can be found in the guidance notes for parents and guardians. </p>
-            </div>
         </div>
     </div>
 
-    <p><a href="../account/start-now">Return to start now</a></p>
-</div>
+    <h1 class="govuk-heading-l">Review supporting evidence</h1>
+
+    <p class="govuk-body">If the parent appeals, you’ll need to review their supporting evidence.</p>
+
+    <p class="govuk-body"><a class="govuk-link" rel="noreferrer noopener" target="_blank" href="~/Home/Guidance">See a complete list of acceptable evidence (opens in new tab)</a>.</p>
+
+
+    <h2 class="govuk-heading-m">If you have not received any evidence</h2>
+    <p class="govuk-body">You can either:</p>
+
+
+    <ul class="govuk-list govuk-list--bullet">
+        <li>contact the relevant school to ask them to collect it from the parent or guardian</li>
+        <li>email the Department for Education support desk to request a separate check at ecs.admin@education.gov.uk</li>
+    </ul>
+
+    <p> @Html.ActionLink("Return to dashboard", "index", "home")</p>
 </div>
