--- a/CheckYourEligibility-Admin/Views/LocalAuthority/Check/Outcome/Technical_Error.cshtml
+++ b/CheckYourEligibility-Admin/Views/LocalAuthority/Check/Outcome/Technical_Error.cshtml
@@ -1,7 +1,7 @@
 ﻿@* <a class="govuk-back-link" href="#" onclick="history.back(); return false;">Back</a> *@
 <a class="govuk-back-link-nolink"></a>
 
-<div id="content" data-type="Not_Found">
+<div id="content" data-type="Technical_Error">
 
     <div class="govuk-notification-banner" role="region" aria-labelledby="govuk-notification-banner-title" data-module="govuk-notification-banner" data-govuk-notification-banner-init="">
         <div class="govuk-notification-banner__header">
@@ -10,11 +10,12 @@
             </h2>
         </div>
         <div class="govuk-notification-banner__content">
-            <p class="govuk-notification-banner__heading">The personal information you entered does not match departmental records.</p>
+            <p class="govuk-notification-banner__heading">There’s been a technical error.</p>
+            <p>@Html.ActionLink("Try again later", "Enter_Details", "check"), ensuring you’ve entered the parent or guardian details accurately.</p>
         </div>
     </div>
 
-    <h1 class="govuk-heading-l">Check the details and try again</h1>
-    <p>@Html.ActionLink("Try again", "Enter_Details", "check")</p>
-    <p>@Html.ActionLink("Return to dashboard", "index", "home")</p>
+    <h1 class="govuk-heading-l">If the check keeps failing</h1>
+    <p>Contact the Department for Education support desk at ecs.admin@education.gov.uk.</p>
+
 </div>
