updated id to match failure given

--- a/CheckYourEligibility-Admin/Views/Check/Enter_Details.cshtml
+++ b/CheckYourEligibility-Admin/Views/Check/Enter_Details.cshtml
@@ -99,7 +99,7 @@
                     National Insurance number or asylum support reference number
                 </legend>
 
-                <div id="NINAS-hint" class="govuk-hint">
+                <div id="NINAS" class="govuk-hint">
                     Select one option.
                 </div>
                 <p class="govuk-error-message">
