content update from design

--- a/CheckYourEligibility-Admin/Views/Check/Outcome/Not_Eligible.cshtml
+++ b/CheckYourEligibility-Admin/Views/Check/Outcome/Not_Eligible.cshtml
@@ -37,8 +37,7 @@
             Appeal now
         </button>
     </form>
-    <p>Alternatively, you can contact the Department for Education support desk through the <a href="https://forms.office.com/Pages/ResponsePage.aspx?id=yXfS-grGoU2187O4s0qC-URYbNo1-R1EubHA0gNJis5UOVo3VU1KV0E0QkxTMFQ0RFZQUUZCR0E0WC4u">Check a Family's FSM Eligibility Query Form</a> to request a separate check.</p>
-
+    <p class="govuk-body">Alternatively, you can <a href="https://forms.office.com/Pages/ResponsePage.aspx?id=yXfS-grGoU2187O4s0qC-URYbNo1-R1EubHA0gNJis5UOVo3VU1KV0E0QkxTMFQ0RFZQUUZCR0E0WC4u" class="govuk-link">contact the Department for Education support desk</a>to request a separate check.</p>
     <div class="govuk-!-padding-bottom-2"></div>
 
     <p> @Html.ActionLink("Return to dashboard", "index", "home")</p>
