--- a/CheckYourEligibility-Admin/Views/Check/Outcome/Technical_Error.cshtml
+++ b/CheckYourEligibility-Admin/Views/Check/Outcome/Technical_Error.cshtml
@@ -1,5 +1,5 @@
-﻿@* <a class="govuk-back-link" href="#" onclick="history.back(); return false;">Back</a> *@
-<a class="govuk-back-link-nolink"></a>
+﻿<a class="govuk-back-link" @Html.ActionLink("Back", "Enter_Details", "check")</a>
+@* <a class="govuk-back-link-nolink"></a> *@
 
 <div id="content" data-type="Technical_Error">
 
