--- a/CheckYourEligibility-Admin/Views/Check/Outcome/Eligible_LA.cshtml
+++ b/CheckYourEligibility-Admin/Views/Check/Outcome/Eligible_LA.cshtml
@@ -18,7 +18,7 @@
         <h1 class="govuk-heading-l">Tell their school</h1>
         <p class="govuk-body">Tell the school that the children of this parent or guardian are eligible for free school meals and ask them to make an application.</p>
 
-        @Html.ActionLink("Run another check", "Enter_Details", "check", null, new { @class = "govuk-button" })
+        @Html.ActionLink("Run another check", "Enter_Details", "Check", null, new { @class = "govuk-button" })
         <p>@Html.ActionLink("Return to dashboard", "index", "home")</p>
     </div>
 </div>
