--- a/CheckYourEligibility-Admin/Views/Check/Outcome/Not_Found.cshtml
+++ b/CheckYourEligibility-Admin/Views/Check/Outcome/Not_Found.cshtml
@@ -15,6 +15,6 @@
     </div>
 
     <h1 class="govuk-heading-l">Check the details and try again</h1>
-    <p>@Html.ActionLink("Try again", "Enter_Details", "check")</p>
+    <p>@Html.ActionLink("Try again", "Enter_Details", "Check")</p>
     <p>@Html.ActionLink("Return to dashboard", "index", "home")</p>
 </div>
