--- a/CheckYourEligibility-Admin/Views/Check/Outcome/Not_Eligible.cshtml
+++ b/CheckYourEligibility-Admin/Views/Check/Outcome/Not_Eligible.cshtml
@@ -1,4 +1,4 @@
-﻿<a class="govuk-back-link" @Html.ActionLink("Back", "Enter_Details", "check")</a>
+﻿<a class="govuk-back-link" @Html.ActionLink("Back", "Enter_Details", "Check")</a>
 @* <a class="govuk-back-link-nolink"></a> *@
 
 <div id="content" data-type="Not_Eligible">
@@ -21,7 +21,7 @@
 
     <p class="govuk-body">You'll be told how to send the local authority supporting evidence after you've made an appeal.</p>
 
-    @Html.ActionLink("Appeal now", "Enter_Child_Details", "check", null, new { @class = "govuk-button" })
+    @Html.ActionLink("Appeal now", "Enter_Child_Details", "Check", null, new { @class = "govuk-button" })
 
     <p class="govuk-body">Alternatively, you can contact the Department for Education support desk at <a href="mailto:ecs.admin@education.gov.uk">ecs.admin@education.gov.uk</a> to request a separate check.</p>
 
