--- a/CheckYourEligibility-Admin/Views/Check/Outcome/Technical_Error.cshtml
+++ b/CheckYourEligibility-Admin/Views/Check/Outcome/Technical_Error.cshtml
@@ -1,4 +1,4 @@
-﻿<a class="govuk-back-link" @Html.ActionLink("Back", "Enter_Details", "check")</a>
+﻿<a class="govuk-back-link" @Html.ActionLink("Back", "Enter_Details", "Check")</a>
 @* <a class="govuk-back-link-nolink"></a> *@
 
 <div id="content" data-type="Technical_Error">
@@ -11,7 +11,7 @@
         </div>
         <div class="govuk-notification-banner__content">
             <p class="govuk-notification-banner__heading">There’s been a technical error.</p>
-            <p>@Html.ActionLink("Try again later", "Enter_Details", "check"), ensuring you’ve entered the parent or guardian details accurately.</p>
+            <p>@Html.ActionLink("Try again later", "Enter_Details", "Check"), ensuring you’ve entered the parent or guardian details accurately.</p>
         </div>
     </div>
 
