Cypress tests to cover design changes

--- a/CheckYourEligibility-Admin/Views/Check/Outcome/Eligible.cshtml
+++ b/CheckYourEligibility-Admin/Views/Check/Outcome/Eligible.cshtml
@@ -18,7 +18,7 @@
         <h1 class="govuk-heading-l">Continue to add children's details</h1>
         <p class="govuk-body">Continue to the next page to add these children's details.</p>
 
-        @Html.ActionLink("Add children's details", "Enter_Child_Details", "check", null, new { @class = "govuk-button" })
+        @Html.ActionLink("Add children's details", "Enter_Child_Details", "Check", null, new { @class = "govuk-button" })
         <p>@Html.ActionLink("Return to dashboard", "index", "home")</p>
         <p> @Html.ActionLink("Sign Out", "SignOut", "Account")</p>
     </div>
