More Actionlink capitalisation for cypress tests

--- a/CheckYourEligibility-Admin/Views/Application/ApplicationDetailAppealConfirmationSent.cshtml
+++ b/CheckYourEligibility-Admin/Views/Application/ApplicationDetailAppealConfirmationSent.cshtml
@@ -19,6 +19,6 @@
     
     <div class="govuk-!-padding-bottom-3"></div>
     <p>@Html.ActionLink("Process more appeals", "AppealsApplications", "application", new { PageNumber = 0 }, new { @class = "" })</p>
-    <p>@Html.ActionLink("Return to dashboard", "Index", "home", null, new { @class = "" })</p>
-    <p>@Html.ActionLink("Sign out", "SignOut", "account", null, new { @class = "" })</p>
+    <p>@Html.ActionLink("Return to dashboard", "Index", "Home", null, new { @class = "" })</p>
+    <p>@Html.ActionLink("Sign out", "SignOut", "Account", null, new { @class = "" })</p>
 </main>
