--- a/CheckYourEligibility-Admin/Views/BulkUpload/BatchOutcome/Success.cshtml
+++ b/CheckYourEligibility-Admin/Views/BulkUpload/BatchOutcome/Success.cshtml
@@ -24,7 +24,7 @@
     <p><strong>May not be entitled</strong> – The children of this parent or guardian may not be entitled to free school meals. To appeal, provide evidence to support your local authority in making a decision. View the list of acceptable evidence. </p>
     <p><strong>Could not check</strong>  – This parent or guardian’s personal information doesn’t match the departmental records. Either their data was entered incorrectly or their entitlement isn’t currently updated on the system.</p>
     <p><strong>Error</strong> – There was a problem accessing this parent or guardian’s data to obtain a result. </p>
-<p> @Html.ActionLink("Return to dashboard", "index", "home")</p>
+<p>@Html.ActionLink("Return to dashboard", "Index", "Home")</p>
 <p> @Html.ActionLink("Sign Out", "SignOut", "Account")</p>
 
 
