--- a/CheckYourEligibility-Admin/Views/BulkUpload/Not_Eligible.cshtml
+++ b/CheckYourEligibility-Admin/Views/BulkUpload/Not_Eligible.cshtml
@@ -35,5 +35,5 @@
 
 <div class="govuk-!-padding-bottom-2"></div>
 
-<p> @Html.ActionLink("Return to dashboard", "index", "home")</p>
+<p>@Html.ActionLink("Return to dashboard", "Index", "Home")</p>
 <p> @Html.ActionLink("Sign Out", "SignOut", "Account")</p>
