--- a/CheckYourEligibility-Admin/Views/Check/Outcome/Not_Eligible.cshtml
+++ b/CheckYourEligibility-Admin/Views/Check/Outcome/Not_Eligible.cshtml
@@ -25,6 +25,6 @@
 
     <p class="govuk-body">Alternatively, you can contact the Department for Education support desk at <a href="mailto:ecs.admin@education.gov.uk">ecs.admin@education.gov.uk</a> to request a separate check.</p>
 
-    <p>@Html.ActionLink("Return to dashboard", "index", "home")</p>
+    <p>@Html.ActionLink("Return to dashboard", "Index", "Home")</p>
 
 </div>
