--- a/CheckYourEligibility-Admin/Views/Check/Outcome/Not_Eligible_LA.cshtml
+++ b/CheckYourEligibility-Admin/Views/Check/Outcome/Not_Eligible_LA.cshtml
@@ -28,5 +28,5 @@
         <li>email the Department for Education support desk to request a separate check at ecs.admin@education.gov.uk</li>
     </ul>
 
-    <p> @Html.ActionLink("Return to dashboard", "index", "home")</p>
+    <p>@Html.ActionLink("Return to dashboard", "Index", "Home")</p>
 </div>
