--- a/CheckYourEligibility-Admin/Views/Check/Outcome/Not_Found.cshtml
+++ b/CheckYourEligibility-Admin/Views/Check/Outcome/Not_Found.cshtml
@@ -16,5 +16,5 @@
 
     <h1 class="govuk-heading-l">Check the details and try again</h1>
     <p>@Html.ActionLink("Try again", "Enter_Details", "Check")</p>
-    <p>@Html.ActionLink("Return to dashboard", "index", "home")</p>
+    <p>@Html.ActionLink("Return to dashboard", "Index", "Home")</p>
 </div>
