--- a/CheckYourEligibility-Admin/Views/Check/Outcome/Eligible.cshtml
+++ b/CheckYourEligibility-Admin/Views/Check/Outcome/Eligible.cshtml
@@ -19,7 +19,7 @@
         <p class="govuk-body">Continue to the next page to add these children's details.</p>
 
         @Html.ActionLink("Add children's details", "Enter_Child_Details", "Check", null, new { @class = "govuk-button" })
-        <p>@Html.ActionLink("Return to dashboard", "index", "home")</p>
+        <p>@Html.ActionLink("Return to dashboard", "Index", "Home")</p>
         <p> @Html.ActionLink("Sign Out", "SignOut", "Account")</p>
     </div>
 </div>
