--- a/CheckYourEligibility-Admin/Views/Check/Outcome/Eligible_LA.cshtml
+++ b/CheckYourEligibility-Admin/Views/Check/Outcome/Eligible_LA.cshtml
@@ -19,6 +19,6 @@
         <p class="govuk-body">Tell the school that the children of this parent or guardian are eligible for free school meals and ask them to make an application.</p>
 
         @Html.ActionLink("Run another check", "Enter_Details", "Check", null, new { @class = "govuk-button" })
-        <p>@Html.ActionLink("Return to dashboard", "index", "home")</p>
+        <p>@Html.ActionLink("Return to dashboard", "Index", "Home")</p>
     </div>
 </div>
