--- a/CheckYourEligibility-Admin/Views/Check/Outcome/Eligible.cshtml
+++ b/CheckYourEligibility-Admin/Views/Check/Outcome/Eligible.cshtml
@@ -1,7 +1,7 @@
 ﻿<a class="govuk-back-link" @Html.ActionLink("Back", "Enter_Details", "Check")</a>
 @* <a class="govuk-back-link-nolink"></a> *@
 
-<div class="govuk-grid-row" id="content" data-type="Eligible_LA">
+<div class="govuk-grid-row" id="content" data-type="Eligible">
     <div class="govuk-grid-column-full">
         <div class="govuk-notification-banner govuk-notification-banner--success" role="alert" aria-labelledby="govuk-notification-banner-title" data-module="govuk-notification-banner" data-govuk-notification-banner-init="">
             <div class="govuk-notification-banner__header">
