--- a/CheckYourEligibility-Admin/Views/Check/Outcome/Eligible.cshtml
+++ b/CheckYourEligibility-Admin/Views/Check/Outcome/Eligible.cshtml
@@ -1,22 +1,25 @@
-﻿@* <a class="govuk-back-link" href="#" onclick="history.back(); return false;">Back</a>*@
-<a class="govuk-back-link-nolink"></a>
+﻿<a class="govuk-back-link" @Html.ActionLink("Back", "Enter_Details", "Check")</a>
+@* <a class="govuk-back-link-nolink"></a> *@
 
 <div class="govuk-grid-row" id="content" data-type="Eligible">
     <div class="govuk-grid-column-full">
-        <h1 class="govuk-heading-l">@TempData["OutcomeText"]</h1>
+        <div class="govuk-notification-banner govuk-notification-banner--success" role="alert" aria-labelledby="govuk-notification-banner-title" data-module="govuk-notification-banner" data-govuk-notification-banner-init="">
+            <div class="govuk-notification-banner__header">
+                <h2 class="govuk-notification-banner__title" id="govuk-notification-banner-title">
+                    Children eligible
+                </h2>
+            </div>
+            <div class="govuk-notification-banner__content">
+                <h3 class="govuk-notification-banner__heading">
+                    The children of this parent or guardian are eligible for free school meals.
+                </h3>
+            </div>
+        </div>
+        <h1 class="govuk-heading-l">Continue to add children's details</h1>
+        <p class="govuk-body">Continue to the next page to add these children's details.</p>
 
-
-        <h2 class="govuk-heading-m">What to do next</h2>
-
-        <p>Select 'Add children's details' on this page and provide the information requested.</p>
-
-        <form action="Enter_Child_Details" novalidate>
-            <button class="govuk-button govuk-!-margin-top-5" data-module="govuk-button">
-                Add children's details
-            </button>
-        </form>
-
-        <p> @Html.ActionLink("Return to dashboard", "index", "home")</p>
+        @Html.ActionLink("Add children's details", "Enter_Child_Details", "Check", null, new { @class = "govuk-button" })
+        <p>@Html.ActionLink("Return to dashboard", "Index", "Home")</p>
         <p> @Html.ActionLink("Sign Out", "SignOut", "Account")</p>
     </div>
 </div>
