--- a/CheckYourEligibility-Admin/Views/Check/Outcome/Not_Eligible.cshtml
+++ b/CheckYourEligibility-Admin/Views/Check/Outcome/Not_Eligible.cshtml
@@ -1,45 +1,30 @@
-﻿@* <a class="govuk-back-link" href="#" onclick="history.back(); return false;">Back</a> *@
-<a class="govuk-back-link-nolink"></a>
+﻿<a class="govuk-back-link" @Html.ActionLink("Back", "Enter_Details", "Check")</a>
+@* <a class="govuk-back-link-nolink"></a> *@
 
 <div id="content" data-type="Not_Eligible">
-    <div class="govuk-width-container">
-        <div class="govuk-grid-row">
-            <div class="govuk-grid-column-two-thirds">
-                <p class="govuk-heading-l">@TempData["OutcomeText"]</p>
-                <p class="govuk-body">If the parent wishes to appeal, you’ll need to send their supporting evidence to your local authority for review.</p>
-            </div>
+    <div class="govuk-notification-banner" role="region" aria-labelledby="govuk-notification-banner-title" data-module="govuk-notification-banner" data-govuk-notification-banner-init="">
+        <div class="govuk-notification-banner__header">
+            <h2 class="govuk-notification-banner__title" id="govuk-notification-banner-title">
+                May not be eligible
+            </h2>
+        </div>
+        <div class="govuk-notification-banner__content">
+            <p class="govuk-notification-banner__heading">
+                The children of this parent or guardian may not be eligible for free school meals.
+            </p>
+            <p class="govuk-body">The parent or guardian can appeal, but you’ll need to ask them for supporting evidence.</p>
+            <p class="govuk-body"><a class="govuk-link" rel="noreferrer noopener" target="_blank" href="~/Home/Guidance">See a complete list of acceptable evidence (opens in new tab)</a>.</p>
         </div>
     </div>
 
-    <div class="govuk-!-padding-bottom-3"></div>
+    <h1 class="govuk-heading-l">Make an appeal</h1>
 
+    <p class="govuk-body">You'll be told how to send the local authority supporting evidence after you've made an appeal.</p>
 
-    <div class="govuk-width-container">
-        <div class="govuk-grid-row">
-            <div class="govuk-grid-column-two-thirds">
-                <h2 class="govuk-heading-m">How to appeal</h2>
-                <ol class="govuk-list govuk-list--number">
-                    <li>Go to the <a class="govuk-link" rel="noreferrer noopener" target="_blank" href="/Home/Guidance">guidance for reviewing evidence page</a> to see a complete list of acceptable evidence types. If you haven’t received any evidence yet, contact the the parent or guardian. </li>
-                    <li>Select 'Appeal now' on this page and provide the information requested. </li>
-                    <li>Once completed, you will receive further instructions on how to send on supporting evidence to your local authority.</li>
-                </ol>
-            </div>
-        </div>
-    </div>
+    @Html.ActionLink("Appeal now", "Enter_Child_Details", "Check", null, new { @class = "govuk-button" })
 
-    @* <a class="govuk-back-link" href="/Back" onclick="history.back(); return false;">Back</a> *@
-    <a class="govuk-back-link-nolink"></a>
+    <p class="govuk-body">Alternatively, you can contact the Department for Education support desk at <a href="mailto:ecs.admin@education.gov.uk">ecs.admin@education.gov.uk</a> to request a separate check.</p>
 
-    <div class="govuk-!-padding-bottom-3"></div>
+    <p>@Html.ActionLink("Return to dashboard", "Index", "Home")</p>
 
-    <form action="Enter_Child_Details" method="get" novalidate>
-        <button class="govuk-button govuk-!-margin-top-5" data-module="govuk-button">
-            Appeal now
-        </button>
-    </form>
-    <p class="govuk-body">Alternatively, you can <a href="https://forms.office.com/Pages/ResponsePage.aspx?id=yXfS-grGoU2187O4s0qC-URYbNo1-R1EubHA0gNJis5UOVo3VU1KV0E0QkxTMFQ0RFZQUUZCR0E0WC4u" class="govuk-link">contact the Department for Education support desk</a>to request a separate check.</p>
-    <div class="govuk-!-padding-bottom-2"></div>
-
-    <p> @Html.ActionLink("Return to dashboard", "index", "home")</p>
-    <p> @Html.ActionLink("Sign Out", "SignOut", "Account")</p>
 </div>
