--- a/CheckYourEligibility-Admin/Views/Check/Outcome/Not_Found.cshtml
+++ b/CheckYourEligibility-Admin/Views/Check/Outcome/Not_Found.cshtml
@@ -1,12 +1,20 @@
 ﻿@* <a class="govuk-back-link" href="#" onclick="history.back(); return false;">Back</a> *@
 <a class="govuk-back-link-nolink"></a>
 
-<div class="govuk-grid-row" id="content" data-type="Not_Found">
-    <div class="govuk-grid-column-two-thirds">
-        <h1 class="govuk-heading-l">@TempData["OutcomeText"]</h1>
-        <p>The personal information you entered doesn’t match the departmental records.  </p>
-        <p>Please <a href="javascript:window.history.back()">try again</a>, ensuring you’ve entered the parent/guardian details accurately and in the correct format.</p>
-        <p> @Html.ActionLink("Return to dashboard", "index", "home")</p>
-        <p> @Html.ActionLink("Sign Out", "SignOut", "Account")</p>
+<div id="content" data-type="Not_Found">
+
+    <div class="govuk-notification-banner" role="region" aria-labelledby="govuk-notification-banner-title" data-module="govuk-notification-banner" data-govuk-notification-banner-init="">
+        <div class="govuk-notification-banner__header">
+            <h2 class="govuk-notification-banner__title" id="govuk-notification-banner-title">
+                Check failed
+            </h2>
+        </div>
+        <div class="govuk-notification-banner__content">
+            <p class="govuk-notification-banner__heading">The personal information you entered does not match departmental records.</p>
+        </div>
     </div>
+
+    <h1 class="govuk-heading-l">Check the details and try again</h1>
+    <p>@Html.ActionLink("Try again", "Enter_Details", "Check")</p>
+    <p>@Html.ActionLink("Return to dashboard", "Index", "Home")</p>
 </div>
