--- a/CheckYourEligibility-Admin/Views/Check/ApplicationsRegistered.cshtml
+++ b/CheckYourEligibility-Admin/Views/Check/ApplicationsRegistered.cshtml
@@ -1,5 +1,4 @@
 ﻿@using CheckYourEligibility_FrontEnd.ViewModels
-
 @model ApplicationConfirmationEntitledViewModel
 
 @{
@@ -9,21 +8,27 @@
 @* <a class="govuk-back-link" href="#" onclick="history.back(); return false;">Back</a> *@
 <a class="govuk-back-link-nolink"></a>
 
-<div class="govuk-width-container">
-    <div class="govuk-grid-row">
-        <div class="govuk-grid-column-full">
-            <h1 class="govuk-heading-xl">Children details added</h1>
-            <p>You have successfully added children’s details to @Model.ParentName free school meals application record.</p>
-        </div>
+<div class="govuk-notification-banner govuk-notification-banner--success" role="alert" aria-labelledby="govuk-notification-banner-title" data-module="govuk-notification-banner" data-govuk-notification-banner-init="">
+    <div class="govuk-notification-banner__header">
+        <h2 class="govuk-notification-banner__title" id="govuk-notification-banner-title">
+            Success
+        </h2>
+    </div>
+    <div class="govuk-notification-banner__content">
+        <h3 class="govuk-notification-banner__heading">
+            Children's details added
+        </h3>
+        <p class="govuk-body">You've successfully added details to the free school meals application record for @Model.ParentName</p>
     </div>
 </div>
+
+<h1 class="govuk-heading-l">Application record for @Model.ParentName</h1>
 
 <div class="govuk-grid-row">
     <div class="govuk-grid-column-full">
         <table class="govuk-table">
             <thead class="govuk-table__head">
                 <tr class="govuk-table__row">
-                    <th class="govuk-table__header">Parent or guardian</th>
                     <th class="govuk-table__header">Child</th>
                     <th class="govuk-table__header">Reference</th>
                 </tr>
@@ -32,25 +37,23 @@
                 @foreach (var item in @Model.Children)
                 {
                     <tr class="govuk-table__row">
-                        <td class="govuk-table__cell">@item.ParentName</td>
                         <td class="govuk-table__cell">@item.ChildName</td>
                         <td class="govuk-table__cell">@item.Reference</td>
                     </tr>
                 }
-
             </tbody>
         </table>
     </div>
 </div>
+
 <div class="govuk-width-container">
     <div class="govuk-grid-row">
         <div class="govuk-grid-column-full">
             <h2 class="govuk-heading-m">What to do next</h2>
             <p> @TempData["Status"]</p>
-            <p> Go to <a href="../checker/applications" class="govuk-link">@Html.ActionLink("Finalise applications", "FinaliseApplications", "application")</a> and follow the instructions there. </p>
+            <p> Go to <a class="govuk-link">@Html.ActionLink("Finalise applications", "FinaliseApplications", "application")</a> and follow the instructions there. </p>
         </div>
     </div>
 </div>
 
 <p>@Html.ActionLink("Return to dashboard", "Index", "Home")</p>
-<p> @Html.ActionLink("Sign Out", "SignOut", "Account")</p>
